--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cmp_string_match"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["aki <aki.akaguma@hotmail.com>"]
 edition = "2018"
 description = "research: comparing string match of rust"
@@ -18,6 +18,7 @@ aho-corasick = "0.7"
 memchr = "2.3"      # sse2
 memmem = "0.1"      # two way
 sliceslice = "0.2"  # avx2
+libc = "0.2"
 
 regex = "1.4"
 fancy-regex = "0.5"
