--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cmp_string_find"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["aki <aki.akaguma@hotmail.com>"]
 edition = "2018"
 description = "research: comparing string match of rust"
@@ -13,22 +13,23 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "1.0"
-twoway = "0.2"
-aho-corasick = "0.7"
-memchr = "2.3"      # sse2
-memmem = "0.1"      # two way
-sliceslice = "0.2"  # avx2
-libc = "0.2"
 
-regex = "1.4"
-fancy-regex = "0.5"
-onig = "6.1"        # Oniguruma, ruby compatible
-pcre2 = "0.2"       # perl compatible
+twoway = "=0.2"
+aho-corasick = "=0.7"
+memchr = "=2.4"      # sse2
+memmem = "=0.1"      # two way
+#sliceslice = "=0.3"  # avx2
+libc = "=0.2"
 
-glob = "0.3"
-capturing-glob = "0.1"
-globset = "0.4"
-globber = "0.1"
+regex = "=1.4"
+fancy-regex = "=0.5"
+onig = "=6.1"        # Oniguruma, ruby compatible
+pcre2 = "=0.2"       # perl compatible
+
+glob = "=0.3"
+capturing-glob = "=0.1"
+globset = "=0.4"
+globber = "=0.1"
 
 [dev-dependencies]
 criterion = "0.3"
